--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "1.0"
+version: "3.9"
 services:
   app:
     build:
@@ -7,6 +7,10 @@ services:
     container_name: control_Kaiten
     ports:
       - "8000:8000"
-    volumes:
-      - ./app/configs/config.toml:/app/configs/config.toml
+    configs:
+      - config
     command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+
+configs:
+  config:
+    file: ./config.toml
