--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ idna==3.10
 pycparser==2.22
 pydantic==2.10.4
 pydantic_core==2.27.2
+python-dotenv==1.0.1
 python-multipart==0.0.20
 sniffio==1.3.1
 starlette==0.41.3
