--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-CONFIG_PATH = "./configs/config.toml"
-SPACES_PATH = "./configs/spaces.json"
+CONFIG = "./configs/config.toml"
+SECRET = "./configs/secret.toml"
